--- a/21BDS0100_EDA.ipynb
+++ b/21BDS0100_EDA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOAKyXg0ngPvgNdO7vcZmWJ",
+      "authorship_tag": "ABX9TyNWimlISRAmKTTQN6uL0eLT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# GitHub Link:\n",
+        "# GitHub Link: https://github.com/PranayBatta/EDA/tree/main\n",
         "# Colab Link: https://colab.research.google.com/drive/11PdXjT781IEoUTalQN6MuEzq5BRJCw3c#scrollTo=AKWOEX-D6SjX\n",
         "# PRANAY BATTA\n",
         "# 21BDS0100"
